--- a/templates/components/upload-pair.html
+++ b/templates/components/upload-pair.html
@@ -13,5 +13,8 @@
   {% set label="Expected File" %} 
   {% include "components/upload-file.html" %}
 
+  <div id="error-{{ count }}" class="text-center badge bg-danger mt-3 p-2"></div>
+
+
 </div>
 
