--- a/templates/components/loader.html
+++ b/templates/components/loader.html
@@ -1,6 +1,6 @@
-<div id="loader" class="text-center my-5" style="display: none">
-  <div class="spinner-border text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <p class="mt-3 text-secondary">Comparing files, please wait...</p>
+<div id="loader" class="text-center" style="display: none">
+  <div class="loader"></div>
+  <p class="text-light mt-1 mt-3">
+    Analyzing your Excel files... This may take a moment.
+  </p>
 </div>
