Download the report in pdf as well as json format

--- a/templates/features.html
+++ b/templates/features.html
@@ -28,7 +28,7 @@
       </div>
       <h5>Export Reports</h5>
       <p class="text-light mt-1 small">
-        Download detailed comparison reports
+        Download detailed comparison reports in PDF and JSON formats
       </p>
     </div>
   </div>
