--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -15,6 +15,6 @@
 
   {% include 'file-manager.html' %}
 
-  {% include 'components/quick-stats.html' %}
+  <!-- {% include 'components/quick-stats.html' %} -->
 
 </div>
