--- a/templates/file-manager.html
+++ b/templates/file-manager.html
@@ -1,6 +1,7 @@
 <div class="nav-section">
-  <div class="nav-title">File Management</div>
+  <div class="nav-title">Upload Files</div>
   <!-- Upload Form in Sidebar -->
+   
   <form id="uploadForm" enctype="multipart/form-data">
     <div id="filePairs">
       <!-- Initial file pair -->
