--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -8,7 +8,7 @@
         />
     </div>
     <div class="brand-text">ExcelCompare Pro</div>
-    <small class="text-light mt-1">Enterprise Data Comparison</small>
+    <!-- <small class="text-light mt-1">Enterprise Data Comparison</small> -->
   </div>
 
   <!-- {% include 'components/navbar.html' %} -->
